Just cleaning up some stuff

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
     <div class="topnav" id="myTopnav">
     <a href="./index.html" class="active">Home</a>
-    <a href="./factorial.html">Factorial</a>
+    <a href="./catalog.html">Catalog</a>
     <a href="#news">News</a>
     <a href="#contact">Contact</a>
-    <a href="./aboutme.html">About Me</a>
+    <a href="./about.html">About</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
     </a>
@@ -26,36 +26,36 @@
 
     <body style="background-color:powderblue;">w
 
-        <h1>My cringe space</h1>
+        <h1>car rental thingy</h1>
 
       <div>
         <button id="dontpush">Don't push</button>
       </div>
 
         <div id = "textbox">
-          <p1>Why are you even here oh my god</p1>
+          <p1>Rent cars here</p1>
           <table>
             <tr>
               <th>Firstname</th>
               <th>Lastname</th>
             </tr>
             <tr>
-              <td>Bruh</td>
-              <td>Moment</td>
+              <td>test1</td>
+              <td>test2</td>
             </tr>
             <tr>
-              <td>Ground</td>
-              <td>Pound</td>
+              <td>test3</td>
+              <td>test4</td>
             </tr>
           </table>
         </div>
 
         <div id = "listbox">
-          <p2>Shit i like:</p2>
+          <p2>List stuff :</p2>
           <ul class="list1">
-            <li>Coffee</li>
-            <li>Video games</li>
-            <li>Catgirl waifus</li>
+            <li>test1</li>
+            <li>test2</li>
+            <li>test3</li>
           </ul>
         </div>
         
