--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Blank template</title>
+        <title>Car Rental</title>
 
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
 
     </head>
 
-    <body style="background-color:powderblue;">w
+    <body style="background-color:powderblue;">
 
         <h1>car rental thingy</h1>
 
