--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <a href="./index.html" class="active">Home</a>
     <a href="./catalog.html">Catalog</a>
     <a href="#news">News</a>
-    <a href="#contact.html">Contact</a>
+    <a href="contact.html">Contact</a>
     <a href="./about.html">About</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
