Fixing map hopefully

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
 
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
+        <!-- Load external JavaScript -->
+        <script src="scripts.js"></script>
 
     </head>
 <body style="background-color:rgb(131, 184, 166);">
