--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 
 <h1>Locations</h1>
 
-<div id="googleMap" style="width:100%;height:400px;"></div>
+<div>id="googleMap"</div> 
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALCEHPLnPtRDINnavwBBuAh0TsOC8f8t4&callback=myMap"></script>
 
