--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a href="#news">News</a>
     <a href="./contact.html">Contact</a>
     <a href="./about.html">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <a href="javascript:void(0);" class="icon" onclick="topNav()">
         <i class="fa fa-bars"></i>
     </a>
     </div>  
@@ -30,9 +30,29 @@
 
         <h1>car rental thingy</h1>
 
-      <div>
-        <button id="dontpush">Don't push</button>
-      </div>
+        <div>
+          <button id="login-button" onclick="toggleLoginForm()">Don't push</button>
+        </div>
+
+        <div class="login-container">
+          <h2 class="login-title">Welcome</h2>
+          <form class="login-form">
+            <div class ="input-group success">
+              <label for="email">Email</label>
+              <input type="email" name="email" id="email">
+              <span class="input_msg">Valid email</span>
+            </div>
+
+            <div class ="input-group error">
+              <label for="password">Password</label>
+              <input type="password" name="password" id="password">
+              <span class="input-msg">Incorrect password</span>
+            </div>
+
+            <button type="submit" class="login-submit">Login</button>
+
+          </form>
+        </div>
 
         <div id = "textbox">
           <p1>Rent cars here</p1>
