Login form fixes

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <h1>car rental thingy</h1>
 
         <div>
-          <button id="login-button" onclick="toggleLoginForm()">Don't push</button>
+          <button id="login-button" onclick="toggleLoginForm()">Login</button>
         </div>
 
-        <div class="login-container">
+        <div class="login-container" style="display: none">
           <h2 class="login-title">Welcome</h2>
           <form class="login-form">
             <div class ="input-group success">
