--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <button id="login-button" onclick="toggleLoginForm()">Login</button>
         </div>
 
-        <div class="login-container" style="display: none">
+        <div class="login-container" style="display: none" id = "login-container">
           <h2 class="login-title">Welcome</h2>
           <form class="login-form">
             <div class ="input-group success">
