Login form updates

--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
         <div class="login-container" style="display: none;" id = "login-container">
           <h2 class="login-title">Welcome</h2>
           <form class="login-form">
-            <div class ="input-group success">
+            <div class ="input-group email">
               <label for="email">Email</label>
               <input type="email" name="email" id="email">
-              <span class="input_msg">Valid email</span>
+              <span class="input-msg-email">Invalid email</span>
             </div>
 
-            <div class ="input-group error">
+            <div class ="input-group password">
               <label for="password">Password</label>
               <input type="password" name="password" id="password">
-              <span class="input-msg">Incorrect password</span>
+              <span class="input-msg-password">Incorrect password</span>
             </div>
 
             <button type="submit" class="login-submit">Login</button>
