--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         <div class="login-container" style="display: none;" id = "login-container">
           <h2 class="login-title">Welcome</h2>
           <form class="login-form">
-            <div class ="input-group email">
+            <div class ="input-group">
               <label for="email">Email</label>
               <input type="email" name="email" id="email">
             </div>
 
-            <div class ="input-group password">
+            <div class ="input-group">
               <label for="password">Password</label>
               <input type="password" name="password" id="password">
             </div>
