--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <div class="topnav" id="myTopnav">
-    <a href="./index.html" class="active">Home</a>
-    <a href="./catalog.html">Catalog</a>
-    <a href="#news">News</a>
-    <a href="./contact.html">Contact</a>
-    <a href="./about.html">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="topNav()">
-        <i class="fa fa-bars"></i>
-    </a>
+      <a href="./index.html" class="active">Home</a>
+      <a href="./catalog.html">Catalog</a>
+      <a href="#news">News</a>
+      <a href="./contact.html">Contact</a>
+      <a href="./about.html">About</a>
+      <a href="javascript:void(0);" class="icon" onclick="topNav()">
+          <i class="fa fa-bars"></i>
+      </a>
+      
+      <button id="login-button" class="login-button" onclick="toggleLoginForm()">Login</button>
     </div>  
 
     <head>
@@ -29,10 +31,6 @@
     <body style="background-color:powderblue;">
 
         <h1>car rental thingy</h1>
-
-        <div>
-          <button id="login-button" onclick="toggleLoginForm()">Login</button>
-        </div>
 
         <div class="login-container" style="display: none;" id = "login-container">
           <h2 class="login-title">Welcome</h2>
