--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,19 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <div class="topnav" id="myTopnav">
+      <a href="./index.html" class="active">Home</a>
+      <a href="./catalog.html">Catalog</a>
+      <a href="./contact.html">Contact Us</a>
+      <a href="./about.html">About</a>
+      <a href="javascript:void(0);" class="icon" onclick="topNav()">
+          <i class="fa fa-bars"></i>
+      </a>
+      
+      <button id="login-button" class="login-button" onclick="toggleLoginForm()">Login</button>
+    </div>  
+
     <head>
         <meta charset="utf-8">
 
@@ -9,11 +23,12 @@
         <link rel="stylesheet" href="styles.css">
         <!-- Load external JavaScript -->
         <script src="scripts.js"></script>
+        <script src="jquery-3.6.1.js"></script>
 
     </head>
-<body style="background-color:rgb(131, 184, 166);">
+<body style="background-color:rgb(255, 255, 255);">
 
-<h1>Locations</h1>
+<h1>Contact Us</h1>
 
 <div id="googleMap"></div> 
 
