--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <div class="topnav" id="myTopnav">
       <a href="./index.html" class="active">Home</a>
       <a href="./catalog.html">Catalog</a>
-      <a href="#news">News</a>
-      <a href="./contact.html">Contact</a>
+      <a href="./contact.html">Contact Us</a>
       <a href="./about.html">About</a>
       <a href="javascript:void(0);" class="icon" onclick="topNav()">
           <i class="fa fa-bars"></i>
