--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <meta charset="utf-8">
 
         <title>Car Rental</title>
-
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
         <!-- Load external JavaScript -->
@@ -29,6 +29,10 @@
 <body style="background-color:rgb(255, 255, 255);">
 
 <h1>Contact Us</h1>
+
+<div>
+    <p>Support Hours: Monday to Fridays (Excluding PH), 10AM to 6PM SGT</p>
+</div>
 
 <div id="googleMap"></div> 
 
