--- a/index.html
+++ b/index.html
@@ -20,18 +20,21 @@
         <meta charset="utf-8">
 
         <title>Car Rental</title>
-
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
         <!-- Load external JavaScript -->
         <script src="scripts.js"></script>
         <script src="jquery-3.6.1.js"></script>
-        <script>window.onload = checkUserLogin;</script> 
     </head>
 
     <body style="background-color:rgb(255, 255, 255);">
 
         <h1>Rent your next car, anytime, anywhere</h1>
+        
+        <div id = "textbox">
+          <p1>Rent cars here</p1>
+        </div>   
 
         <div class="login-container" style="display: none;" id = "login-container">
 
@@ -88,12 +91,7 @@
             <button type="submit" class="submit-button">Sign Up</button>
 
           </form>
-        </div>
-
-        <div id = "textbox">
-          <p1>Rent cars here</p1>
-
-        </div>        
+        </div>     
     </body>
 </div>
 
