--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <meta charset="utf-8">
 
         <title>Car Rental</title>
-        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/images/car_favicon.ico">
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
         <!-- Load external JavaScript -->
