--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <meta charset="utf-8">
 
         <title>Car Rental</title>
-        <link rel="icon" type="image/x-icon" href="/images/car_favicon.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="images/car_favicon.png">
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
         <!-- Load external JavaScript -->
