--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
         <!-- Load external JavaScript -->
         <script src="scripts.js"></script>
         <script src="jquery-3.6.1.js"></script>
+
     </head>
 
-    <body style="background-color:rgb(255, 255, 255);">
+    <body style="background-color:rgb(255, 255, 255);" onload="checkUserLogin()">
 
         <h1>Rent your next car, anytime, anywhere</h1>
 
