profile page linking

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,8 @@
           <i class="fa fa-bars"></i>
       </a>
       
-      <button id="login-button" class="login-button" onclick="toggleLoginForm()">Login</button>
+      <button id="topnav-login-button" class="login-button" onclick="toggleLoginForm()">Login</button>
+      <button style="display: none;" id="profile-button" class="profile-button" onclick="location.href='./profile_page.html';">Profile</button>
     </div>  
 
     <head>
@@ -26,7 +27,7 @@
         <script src="jquery-3.6.1.js"></script>
 
     </head>
-<body style="background-color:rgb(255, 255, 255);">
+<body style="background-color:rgb(255, 255, 255);" onload="checkUserLogin()">
 
 <h1>Contact Us</h1>
 
