--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </a>
       
       <button id="topnav-login-button" class="login-button" onclick="toggleLoginForm()">Login</button>
-      <button style="display: none;" id="profile-button" class="profile-button" onclick="toggleLoginForm()">Profile</button>
+      <button style="display: none;" id="profile-button" class="profile-button" onclick="location.href='./profile_page.html';">Profile</button>
     </div>  
 
     <head>
