Updated profile page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
     <body style="background-color:rgb(255, 255, 255);" onload="checkUserLogin()">
 
         <h1>Rent your next car, anytime, anywhere</h1>
+        
+        <img src="images/car_rental.png" alt="test">
+                      
+        <div class="footer">
+          <p>Footer</p>
+        </div>
 
         <div class="login-container" style="display: none;" id = "login-container">
 
@@ -55,6 +61,8 @@
             <div>
               <input type="checkbox" onclick="showPassword()">Show password
             </div>
+
+            <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
             <button type="submit" class="submit-button" onclick="loginSubmit()">Login</button>
 
@@ -88,7 +96,8 @@
             <button type="submit" class="submit-button">Sign Up</button>
 
           </form>
-        </div>     
+        </div>
+
     </body>
 </div>
 
