--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <div class="topnav" id="myTopnav">
-      <a href="./index.html" class="active">Home</a>
+      <a href="./index.html">Home</a>
       <a href="./catalog.html">Catalog</a>
-      <a href="./contact.html">Contact Us</a>
+      <a href="./contact.html" class="active">Contact Us</a>
       <a href="./about.html">About</a>
       <a href="javascript:void(0);" class="icon" onclick="topNav()">
           <i class="fa fa-bars"></i>
@@ -18,7 +18,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Car Rental</title>
+        <title>AZoom Car Rental</title>
         <link rel="icon" type="image/png" sizes="32x32" href="images/car_favicon.png">
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
@@ -31,13 +31,19 @@
 
 <h1>Contact Us</h1>
 
-<div>
+<div id="contact-page-info">
     <p>Support Hours: Monday to Fridays (Excluding PH), 10AM to 6PM SGT</p>
 </div>
 
-<div id="googleMap"></div> 
+<div id="contact-googleMap"></div> 
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALCEHPLnPtRDINnavwBBuAh0TsOC8f8t4&callback=myMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALCEHPLnPtRDINnavwBBuAh0TsOC8f8t4&callback=contactMap"></script>
+
+<div class="footer">
+    <div class="copyright-text">
+        <p>Copyright © 2022 AZoom Car Rental Pte. Ltd.</p>
+    </div>
+  </div>
 
 </body>
 </html>
