--- a/profile_page.html
+++ b/profile_page.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <div class="topnav" id="myTopnav">
-      <a href="./index.html" class="active">Home</a>
+      <a href="./index.html">Home</a>
       <a href="./catalog.html">Catalog</a>
       <a href="./contact.html">Contact Us</a>
       <a href="./about.html">About</a>
@@ -17,7 +17,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Car Rental</title>
+        <title>AZoom Car Rental</title>
         <link rel="icon" type="image/png" sizes="32x32" href="images/car_favicon.png">
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
@@ -49,8 +49,10 @@
         <h1>Rental History</h1>
 
         <div class="footer">
-          <p>Footer</p>
-        </div>       
+            <div class="copyright-text">
+                <p>Copyright © 2022 AZoom Car Rental Pte. Ltd.</p>
+            </div>
+          </div>     
 
     </body>
 </div>
