Updated contact page

--- a/catalog.html
+++ b/catalog.html
@@ -35,8 +35,15 @@
         
                       
         <div class="footer">
-          <p>Footer</p>
-        </div>
+            <div class="copyright-text">
+              <div class="footer-links">
+                <a href="#">Home</a>
+                <a href="#">Terms & Conditions</a>
+                <a href="#">Privacy Policy</a>
+              </div>  
+              <p>Copyright © 2022 AZoom Car Rental Pte. Ltd.</p>
+            </div>
+          </div>
 
         <div class="login-container" style="display: none;" id = "login-container">
 
