--- a/contact.html
+++ b/contact.html
@@ -30,18 +30,46 @@
 <body style="background-color:rgb(255, 255, 255);" onload="checkUserLogin()">
 
 <h1>Contact Us</h1>
-
+<hr>
 <div id="contact-page-info">
     <p>Support Hours: Monday to Fridays (Excluding PH), 10AM to 6PM SGT</p>
+    <div id="contact-flex-container">
+        <div>General Enquiries
+            <br>
+            Tel: 65721329
+            <br>
+            Email: enquiries@azoomcr.com
+            <br> 
+            Response time: 1-7 working days</div>
+        <div>Membership & Booking Enquiries
+            <br>
+            Tel: 65721665
+            <br>
+            Email: support@tribecar.com
+            <br>
+            Response time: 1-3 working days</div>
+        <div>Careers with Tribecar
+            <br>
+            Email: careers@tribecar.com
+            <br>
+            Response time: 1-3 working days</div>
+    </div>
 </div>
 
+<h1>Our Locations</h1>
+<hr>
 <div id="contact-googleMap"></div> 
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALCEHPLnPtRDINnavwBBuAh0TsOC8f8t4&callback=contactMap"></script>
 
 <div class="footer">
     <div class="copyright-text">
-        <p>Copyright © 2022 AZoom Car Rental Pte. Ltd.</p>
+      <div class="footer-links">
+        <a href="#">Home</a>
+        <a href="#">Terms & Conditions</a>
+        <a href="#">Privacy Policy</a>
+      </div>  
+      <p>Copyright © 2022 AZoom Car Rental Pte. Ltd.</p>
     </div>
   </div>
 
