--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
                       
         <div class="footer">
           <div class="copyright-text">
-              <p>Copyright © 2022 AZoom Car Rental Pte. Ltd.</p>
+            <div class="footer-links">
+              <a href="#">Home</a>
+              <a href="#">Terms & Conditions</a>
+              <a href="#">Privacy Policy</a>
+            </div>  
+            <p>Copyright © 2022 AZoom Car Rental Pte. Ltd.</p>
           </div>
         </div>
 
