--- a/profile_page.html
+++ b/profile_page.html
@@ -50,9 +50,14 @@
 
         <div class="footer">
             <div class="copyright-text">
-                <p>Copyright © 2022 AZoom Car Rental Pte. Ltd.</p>
+              <div class="footer-links">
+                <a href="#">Home</a>
+                <a href="#">Terms & Conditions</a>
+                <a href="#">Privacy Policy</a>
+              </div>  
+              <p>Copyright © 2022 AZoom Car Rental Pte. Ltd.</p>
             </div>
-          </div>     
+          </div> 
 
     </body>
 </div>
