--- a/about.html
+++ b/about.html
@@ -1,6 +1,8 @@
 <!doctype html>
 
 <html>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <div class="topnav" id="myTopnav">
         <a href="./index.html">Home</a>
         <a href="./catalog.html">Catalog</a>
@@ -29,8 +31,7 @@
     <body style="background-color:rgb(255, 255, 255);" onload="checkUserLogin()">
 
         <h1>About Us</h1>
-        <p></p>
-    
+        <p>penis what the fuck do i put here</p> 
         
         <div class="footer">
             <div class="copyright-text">
