Added social media links

--- a/car_product_page.html
+++ b/car_product_page.html
@@ -33,7 +33,6 @@
         
         <div class="row">
             <div class="image-column" style="background-color:rgba(136, 166, 221, 0.793);">
-                <!-- <img id="product-page-car" src="images/sedan.png" alt="test"> -->
                 <div class="product-image-container">
 
                     <!-- Full-width images with number text -->
@@ -99,6 +98,13 @@
           </div>
                       
         <div class="footer">
+            <div class="social-media-links">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+                <a href="#" class="fa fa-youtube"></a>
+                <a href="#" class="fa fa-instagram"></a>
+            </div>
           <div class="copyright-text">
             <div class="footer-links">
               <a href="#">Home</a>
