--- a/about.html
+++ b/about.html
@@ -34,6 +34,13 @@
         <p>penis what the fuck do i put here</p> 
         
         <div class="footer">
+            <div class="social-media-links">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+                <a href="#" class="fa fa-youtube"></a>
+                <a href="#" class="fa fa-instagram"></a>
+            </div>
             <div class="copyright-text">
               <div class="footer-links">
                 <a href="#">Home</a>
