--- a/catalog.html
+++ b/catalog.html
@@ -35,6 +35,13 @@
         
                       
         <div class="footer">
+            <div class="social-media-links">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+                <a href="#" class="fa fa-youtube"></a>
+                <a href="#" class="fa fa-instagram"></a>
+            </div>
             <div class="copyright-text">
               <div class="footer-links">
                 <a href="#">Home</a>
