--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,13 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALCEHPLnPtRDINnavwBBuAh0TsOC8f8t4&callback=contactMap"></script>
 
 <div class="footer">
+    <div class="social-media-links">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-youtube"></a>
+        <a href="#" class="fa fa-instagram"></a>
+    </div>
     <div class="copyright-text">
       <div class="footer-links">
         <a href="#">Home</a>
