--- a/profile_page.html
+++ b/profile_page.html
@@ -49,6 +49,13 @@
         <h1>Rental History</h1>
 
         <div class="footer">
+            <div class="social-media-links">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+                <a href="#" class="fa fa-youtube"></a>
+                <a href="#" class="fa fa-instagram"></a>
+            </div>
             <div class="copyright-text">
               <div class="footer-links">
                 <a href="#">Home</a>
