--- a/car_product_page.html
+++ b/car_product_page.html
@@ -61,11 +61,13 @@
 
             <div class="info-column" style="background-color:rgb(228, 228, 228, 0.75);">
               <h2>Standard Sedan</h2>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star"></span> 493 ratings
+              <div id="review-rating">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span> 493 ratings
+              </div>
               <p id="price-tag">$120/day</p>
 
               <form id="reservation-form">
@@ -79,11 +81,10 @@
                 </div>
                 <div class="elem-group">
                   <label for="location-selection">Select Pickup Location</label>
-                  <select id="location-selection" name="location_preference" required>
+                  <select id="location-selection" name="location_preference" onChange="locationSelect()" required>
                       <option value="">Choose a location from the list</option>
-                      <option value="connecting">Connecting</option>
-                      <option value="adjoining">Adjoining</option>
-                      <option value="adjacent">Adjacent</option>
+                      <option value="location-1">Location 1</option>
+                      <option value="location-2">Location 2</option>
                   </select>
                 </div>
                 <hr>
