Added a whole lot of shit

--- a/about.html
+++ b/about.html
@@ -30,9 +30,13 @@
 
     <body style="background-color:rgb(255, 255, 255);" onload="checkUserLogin()">
 
-        <h1>About Us</h1>
-        <p>penis what the fuck do i put here</p> 
-        
+        <h5>About Us</h5>
+        <hr>
+        <div>
+            <p id="about-section">insert bullshit here</p>
+            <img id="about-page-banner" src="images/cool_car_image.jpg" alt="test">
+        </div>
+
         <div class="footer">
             <div class="social-media-links">
                 <a href="#" class="fa fa-facebook"></a>
