--- a/about.html
+++ b/about.html
@@ -33,9 +33,17 @@
         <h5>About Us</h5>
         <hr>
         <div>
-            <p id="about-section">insert bullshit here</p>
-            <img id="about-page-banner" src="images/cool_car_image.jpg" alt="test">
+            <p id="about-section">We at AZoom are a group dedicated to delivering the best electric car rental services to our customers at reasonable prices. <br>
+                 Established in 2017, we have spent the past 5 years establishing our reputation as one of the foremost electric car rental services in Singapore. </p>
+                 <div id="featured-section">
+                    <p>Featured on :</p>
+                    <img src="images/today.svg">
+                    <img src="images/straits_times.png">
+                    <img src="images/mothership.png">
+                </div>    
         </div>
+        <img id="about-page-banner" src="images/cool_car_image.jpg" alt="test">
+
 
         <div class="footer">
             <div class="social-media-links">
