--- a/catalog.html
+++ b/catalog.html
@@ -59,22 +59,22 @@
         </div>
 
         <div id="car-listing">
-            <img id="car-listing-image" src="images/sedan.png">
-            <h4>Standard Sedan</h4>
+            <img id="car-listing-image" src="images/honda.jpg">
+            <h4>Honda E</h4>
             <hr>
             <div id="car-listing-info">
-                <p>Automatic, 5 seater</p>
+                <p>Automatic transmission, 4 seats</p>
                 <p>Available at 2 locations</p>
             </div>
             <button type="submit" id="book-button" onclick="location.href='./sedan_product_page.html';">Start Booking</button>
         </div>
 
         <div id="car-listing">
-            <img id="car-listing-image" src="images/suv.jpg">
-            <h4>Standard SUV</h4>
+            <img id="car-listing-image" src="images/model_3.png">
+            <h4>Tesla Model 3</h4>
             <hr>
             <div id="car-listing-info">
-                <p>Automatic, 7 seater</p>
+                <p>Automatic transmission, 5 seater</p>
                 <p>Available at 2 locations</p>
             </div>
             <button type="submit" id="book-button" onclick="location.href='./suv_product_page.html';">Start Booking</button>
