--- a/sedan_product_page.html
+++ b/sedan_product_page.html
@@ -38,7 +38,7 @@
                     <!-- Full-width images with number text -->
                     <div class="mySlides">
                       <div class="numbertext">1 / 1</div>
-                        <img src="images/sedan.png" style="width:100%">
+                        <img src="images/honda.jpg" style="width:100%">
                     </div>
                   
                     <!-- Next and previous buttons -->
@@ -53,20 +53,20 @@
                     <!-- Thumbnail images -->
                     <div class="row">
                       <div class="column">
-                        <img class="demo cursor" src="images/sedan.png" style="width:100%" onclick="currentSlide(1)" alt="Sedan">
+                        <img class="demo cursor" src="images/honda.jpg" style="width:100%" onclick="currentSlide(1)" alt="Sedan">
                       </div>
                       </div>
                   </div>
             </div>
 
             <div class="info-column" style="background-color:rgb(228, 228, 228, 0.75);">
-              <h2>Standard Sedan</h2>
+              <h2>Honda E</h2>
               <div id="review-rating">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span> 493 ratings
+                <span class="fa fa-star"></span> 369 ratings
               </div>
               <p id="price-tag">$120/day</p>
 
