--- a/payment_confirmation.html
+++ b/payment_confirmation.html
@@ -32,10 +32,10 @@
     <body style="background-color:rgb(255, 255, 255);" onload="checkUserLogin()">
         
         <div class="payment-container">
-            <form name="paymentForm" onsubmit="return validatePayment()">
+            <form name="paymentForm" onsubmit="return validatePayment()" action="payment_complete.html">
               <div class="row">    
                 <div class="col-50">
-                  <h1>Confirm Payment</h1>
+                  <h1>Confirm Reservation</h1>
                   <label for="fname">Accepted Cards</label>
                   <div class="icon-container">
                     <i class="fa fa-cc-visa" style="color:navy;"></i>
@@ -51,21 +51,21 @@
                   <div class="row">
                     <div class="col-50">
                       <label for="expmonth">Exp Month</label>
-                      <input type="number" id="expmonth" name="expmonth" max="12" placeholder="Month">
+                      <input type="text" id="expmonth" name="expmonth" maxlength="2" placeholder="Month">
                     </div>
                     <div class="col-50">
                       <label for="expyear">Exp Year</label>
-                      <input type="number" id="expyear" name="expyear" max="9999" placeholder="Year">
+                      <input type="text" id="expyear" name="expyear" maxlength="4" placeholder="Year">
                     </div>
                     <div class="col-50">
                       <label for="cvv">CVV</label>
-                      <input type="number" id="cvv" name="cvv" max="999" placeholder="000">
+                      <input type="text" id="cvv" name="cvv" maxlength="3" placeholder="000">
                     </div>
                   </div>
                 </div>     
               </div>
 
-              <button type="submit" id="payment-submit" onclick="location.href='./payment_complete.html';">Continue to checkout</button>
+              <button type="submit" id="payment-submit">Continue to checkout</button>
 
             </form>
           </div>
