--- a/suv_product_page.html
+++ b/suv_product_page.html
@@ -38,7 +38,7 @@
                     <!-- Full-width images with number text -->
                     <div class="mySlides">
                       <div class="numbertext">1 / 1</div>
-                        <img src="images/suv.jpg" style="width:100%">
+                        <img src="images/model_3.png" style="width:100%">
                     </div>
                   
                     <!-- Next and previous buttons -->
@@ -53,14 +53,14 @@
                     <!-- Thumbnail images -->
                     <div class="row">
                       <div class="column">
-                        <img class="demo cursor" src="images/suv.jpg" style="width:100%" onclick="currentSlide(1)" alt="SUV">
+                        <img class="demo cursor" src="images/model_3.png" style="width:100%" onclick="currentSlide(1)" alt="SUV">
                       </div>
                       </div>
                   </div>
             </div>
 
             <div class="info-column" style="background-color:rgb(228, 228, 228, 0.75);">
-              <h2>Standard SUV</h2>
+              <h2>Tesla Model 3</h2>
               <div id="review-rating">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
