--- a/sedan_product_page.html
+++ b/sedan_product_page.html
@@ -70,7 +70,7 @@
               </div>
               <p id="price-tag">$120/day</p>
 
-              <form id="reservation-form">
+              <form id="reservation-form" action="payment_confirmation.html">
                 <div class="elem-group inlined">
                   <label for="from-date">From :</label>
                   <input type="date" id="checkin-date" name="checkin" required>
@@ -93,7 +93,7 @@
                 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALCEHPLnPtRDINnavwBBuAh0TsOC8f8t4&callback=reservationMap"></script>
                 <hr>
 
-                <button type="submit" id="reserve-button" onclick="location.href='./payment_confirmation.html';">Reserve Car</button>
+                <button type="submit" id="reserve-button">Reserve Car</button>
               </form>
             </div>
           </div>
